# oak_d_lite_camera_ros2

./: CMakeLists.txt  LICENSE  README.md  package.xml  todo.txt
.github/workflows/: master.yaml
launch/: multicam.launch.py  multicam_color.launch.py  rgbd_stereo.launch.py  urdf_launch.py
meshes/: oak_dlite_base.stl
rviz/: rgbd_stereo_pcl.rviz
src/: rgbd_stereo_publisher.cpp  stereo_publisher.cpp
urdf/: base_camera.urdf.xacro  base_descr.urdf.xacro
urdf/include/: base_macro.urdf.xacro  depthai_macro.urdf.xacro
